AC_INIT(mframe.head)

# configure.in for mframe software
# Process this file with autoconf to produce a configure script.
#
#   Copyright (C) 1998 Free Software Foundation, Inc.
#
#   Written by:  Richard Frith-Macdonald <richard@brainstorm.co.uk>
#
#   This file is part of the GNUstep project
#
#   This library is free software; you can redistribute it and/or
#   modify it under the terms of the GNU Library General Public
#   License as published by the Free Software Foundation; either
#   version 2 of the License, or (at your option) any later version.
#   
#   This library is distributed in the hope that it will be useful,
#   but WITHOUT ANY WARRANTY; without even the implied warranty of
#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
#   Library General Public License for more details.
#
#   You should have received a copy of the GNU Library General Public
#   License along with this library; if not, write to the Free
#   Software Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111 USA.

#--------------------------------------------------------------------
# Determine the host, build, and target systems
#--------------------------------------------------------------------
AC_CANONICAL_SYSTEM

dnl Checking CPU and Operating-System information for mframe.h

case "$target_cpu" in
    alpha*)		target_cpu=alpha;;
    hppa*)		target_cpu=hppa;;
    i[[3456]]86*)	target_cpu=i386;;
    sparc*)		target_cpu=sparc;;
esac

case "$target_os" in
    freebsd*)		target_os=freebsd;;
    openbsd*)		target_os=openbsd;;
esac


if test -d $target_cpu -a "`echo $target_cpu/*`" != "$target_cpu/*"
then
    my_dir=$target_cpu
else
    echo '*************** Warning ****************'
    echo The 'mframe' software has not been ported to $target_cpu.
    echo Using information from unknown.
    echo '****************************************'
    my_dir=unknown
fi

if test -f $my_dir/$target_os
then
    my_path=$my_dir/$target_os
    echo Using information from $my_path.
else
    echo '*************** Warning ****************'
    echo The 'mframe' software has not been ported to $target_cpu-$target_os.
    echo Using information from $my_dir/generic.
    echo '****************************************'
    my_path=$my_dir/generic
fi

rm -f mframe.h
echo "/***************** WARNING ****************" > mframe.h
echo "*  DO NOT EDIT THIS FILE DIRECTLY - IT IS *" >> mframe.h
echo "*  GENERATED AUTOMATICALLY BY THE CONFIG  *" >> mframe.h
echo "*  PROCESS IN THE 'mframe' SUBDIRECTORY.  *" >> mframe.h
echo "****************** WARNING ***************/" >> mframe.h
cat mframe.head $my_path mframe.foot >> mframe.h

AC_OUTPUT()

dnl Local Variables:
dnl comment-start: "dnl "
dnl comment-end: ""
dnl comment-start-skip: "\\bdnl\\b\\s *"
dnl compile-command: "autoconf"
dnl End:
